--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -40,32 +40,26 @@
                 <div class="SearchItems">
                     <div class="SearchItemsItem">
                         <input type="text" placeholder="Поиск">
-                        <button><img src="/images/Vector.svg" alt="Поиск"></button>
+                        <button><img src="images/Vector.svg" alt="Поиск"></button>
                     </div>
                 </div>
                     
                 <div class="Notes">
                     <div class="NoteBox">
                         <div class="NoteBoxItem">
-                            <button>
-                            <p class="NoteTitle">Сдать отчёт</p>
-                            <span class="NoteTag">23 Июля 2024</span>
-                            <span class="NoteData">Работа</span>
-                            </button>
+                            <span class="NoteTitle">Сдать отчёт</span>
+                            <span class="NoteData">23 Июля 2024</span>
+                            <span class="NoteTag">Работа</span>
                         </div>
                         <div class="NoteBoxItem">
-                            <button>
                             <span class="NoteTitle">Сдать отчёт</span>
-                            <span class="NoteTag">23 Июля 2024</span>
-                            <span class="NoteData">Работа</span>
-                            </button>
+                            <span class="NoteData">23 Июля 2024</span>
+                            <span class="NoteTag">Работа</span>
                         </div>
                         <div class="NoteBoxItem">
-                            <button>
                             <span class="NoteTitle">Сдать отчёт</span>
-                            <span class="NoteTag">23 Июля 2024</span>
-                            <span class="NoteData">Работа</span>
-                            </button>
+                            <span class="NoteData">23 Июля 2024</span>
+                            <span class="NoteTag">Работа</span>
                         </div>
                     </div>
                 </div>
