--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                     
                 <div class="Notes">
-                    <div class="NoteBox">
+                    <div class="NoteBox" id="list">
                         <div class="NoteBoxItem">
                             <span class="NoteTitle">Сдать отчёт</span>
                             <span class="NoteData">23 Июля 2024</span>
@@ -67,5 +67,6 @@
     </div>
 
 </div>
+    <script src="/script.js" defer></script>
 </body>
 </html>
