--- a/index.html
+++ b/index.html
@@ -64,8 +64,23 @@
                     </div>
                 </div>
             </div>
+    
     </div>
-
+    <div class="overlay">
+        <div class="modal">
+            <button class="ModalClose" id="ModalClose"> X</button>
+                <form class="ModalForm">
+                    <input type="text" class="ModalInput" placeholder="Заголовок">
+                <select class="ModalInput" name="select" id="ModalSelect">
+                    <!-- <option value="value1">Значение1</option>
+                    <option selected value="value2">Значение2</option>
+                    <option value="value3">Значение3</option> -->
+                </select>
+                <button class="ModalButtonSave">Сохранить</button>
+            </form>
+        </div>
+        
+    </div>
 </div>
     <script src="/script.js" defer></script>
 </body>
