--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <div class="wrapperRightItem">
                 <div class="SearchItems">
                     <div class="SearchItemsItem">
-                        <input type="text" placeholder="Поиск">
-                        <button><img src="images/Vector.svg" alt="Поиск"></button>
+                        <input type="text" placeholder="Поиск" id="searchText">
+                        <button><img src="images/Vector.svg" alt="Поиск" id="ButtonSearch"></button>
                     </div>
                 </div>
                     
                 <div class="Notes">
                     <div class="NoteBox" id="list">
-                        </div>
+                        
                     </div>
                 </div>
             </div>
